--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
 
   <title>The 8 Queens Puzzle</title>
-  <meta name="description" content="The Perceptron Challenge" />
+  <meta name="description" content="The 8 Queens Challenge" />
   <meta name="author" content="Marius Popovici" />
 
   <link rel="stylesheet" href="css/styles.css?v=1.0" />
