--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <title>The 8 Queens Puzzle</title>
   <meta name="description" content="The 8 Queens Challenge" />
   <meta name="author" content="Marius Popovici" />
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css?v=1.0" />
 </head>
 
 <body>
   <script type="module" src="index.js"></script>
+  <h1>8 Queens Challenge</h1>
+  <p>Click board to generate different solutions.</p>
   <div class="chessBoard" id="chessBoard"></div>
 </body>
 
